minimal/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: onlineboutique
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: boutique.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
